# deepseek_cli

./: .gitignore  DOCUMENTATION.md  README.md  Secrets.md  deepseek_agentic_cli.py  pyproject.toml
Formula/: deepseek-cli.rb
deepseek_cli/: __init__.py  agent.py  cli.py  config.py  constants.py
deepseek_cli.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_agent_loop.py  test_breadcrumbs.py  test_config.py  test_tools.py
