[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepseek_agent"
version = "0.2.1"
description = "Developer-focused DeepSeek command line tools"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "DeepSeek CLI Maintainers" }
]
license = "MIT"
dependencies = [
  "openai>=1.13.3",
  "packaging>=24.0",
  "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/deepseek/deepseek-cli"

[project.scripts]
deepseek = "deepseek_cli.cli:main"
deepseek-cli = "deepseek_cli.cli:main"

[tool.setuptools.packages.find]
include = ["deepseek_cli*"]
